added yandex map and changed input on button

--- a/catalog.html
+++ b/catalog.html
@@ -120,7 +120,7 @@
               <input class="filters-product__choice filters-product__choice_checked" type="radio" name="power"
                 id="mains" value="mains">
             </fieldset>
-            <input class="filters-product__show" type="submit" value="Показать">
+            <button class="filters-product__show">Показать</button>
           </form>
         </section>
         <section class="catalog-product">
