--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
         <img class="about__map" src="img/map-small.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button class="about__contacts-write-us">Заблудились? Напишите нам!</button>
       </div>
-      <div class="popup-map">
-        <img class="popup-map__img" src="img/map-big.jpg" width="1200" height="779" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+      <div id="map" class="popup-map">
         <button class="popup-map__close" aria-label="Закрыть"></button>
       </div>
       <div class="write-us">
@@ -263,19 +262,19 @@
           <div class="wrapper-answer">
             <p class="wrapper-name">
               <label class="write-us__label" for="your-name">Ваше Имя:</label>
-              <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия">
+              <input class="write-us__input" type="text" name="name" id="your-name" placeholder="Имя Фамилия" required>
             </p>
             <p class="wrapper-email">
-              <label class="write-us__label" for="your-email">Ваш email:</label>
-              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com">
+              <label class="write-us__label" for="your-email" req>Ваш email:</label>
+              <input class="write-us__input" type="email" name="email" id="your-email" placeholder="email@example.com" required>
             </p>
             <p class="wrapper-text">
               <label class="write-us__label" for="your-text">Текст письма:</label>
-              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме"></textarea>
+              <textarea class="write-us__textarea" name="text" id="your-text" cols="61" rows="6" placeholder="В свободной форме" required></textarea>
             </p>
           </div>
           <div class="wrapper-answer-btn">
-            <input class="write-us__submit" type="submit" name="submit" value="Отправить">
+            <button class="write-us__submit">Отправить</button>
           </div>
         </form>
         <button class="write-us__close" aria-label="Закрыть"></button>
@@ -323,6 +322,7 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=e5bbda38-1328-4438-9f35-6b2fd9695d7d&lang=ru_RU" type="text/javascript">
 </body>
 
 </html>
